--- a/NEURODASH/views/config/configStart.html
+++ b/NEURODASH/views/config/configStart.html
@@ -160,9 +160,16 @@
         </div>
         </div>
     </div>
+    <!-- loder -->
+    <div class="loader-default">
+        <div class="loader-circle-9">
+            Loading
+            <span></span>
+        </div>
+    </div>
     
     <!-- script locales -->
-    <script src="../../assets/js/main.js"></script>
+    <script type="module" src="../../assets/js/main.js"></script>
     <!-- <script src="assets/js/sound/sonido.js"></script> -->
     <script src="../../lib/bootstrap/js/bootstrap.bundle.js"></script>
     <script src="../../lib/bootstrap/js/bootstrap.js"></script>
