--- a/NEURODASH/views/tokens/tokenMain.html
+++ b/NEURODASH/views/tokens/tokenMain.html
@@ -20,8 +20,8 @@
             <form class="form-token">
                 <a href="../register.html"><span class="close-token">X</span></a>
                 <div class="info">
-                    <span class="title">Email validation</span>
-                    <p class="description">Check your email, you will be provided with a verification code </p>
+                    <!-- <span class="title">Validación de correo electrónico</span> -->
+                    <p class="description">Revisa tu correo electrónico, se te proporcionará un código de verificación </p>
                 </div>
                 <div class="input-fields">
                     <input placeholder="" type="tel" maxlength="1">
@@ -31,7 +31,7 @@
                 </div>
                 
                 <div class="action-btns">
-                    <a class="verify-token" href="../valitionEmail.html">Verify</a>
+                    <a class="verify-token" href="../valitionEmail.html">Verificar</a>
                 </div>
             </form>
         </div>
