--- a/NEURODASH/assets/css/pages/home.css
+++ b/NEURODASH/assets/css/pages/home.css
@@ -41,6 +41,14 @@
   width: calc(var(--width) * 2);
   height: calc(var(--width) * 2);
 }
+
+.navarHome{
+   
+  /* box-shadow: 0 0 21px rgba(0, 0, 0, 0.27);
+  box-sizing: border-box;
+  box-shadow: 0 0 10px 8px #0a0a0a; */
+}
+
 /* -------------------- botones nav -------------------- */
 
 /*Boton de notificaciones */
@@ -136,6 +144,10 @@
   background-color: var(--clr-botones) !important;
   cursor: pointer;
   border: none;
+  /* background-color: rgb(252, 251, 251); */
+  /* box-shadow: 0 0 21px rgba(0, 0, 0, 0.27);
+  box-sizing: border-box;
+  box-shadow: 0 0 10px 8px #0a0a0a; */
 }
 
 /* -------------------- extras del nav -------------------- */
