--- a/NEURODASH/views/home.html
+++ b/NEURODASH/views/home.html
@@ -24,7 +24,7 @@
 
   <body class="fondo-home">
 
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navarHome">
       <div class="container-fluid">
         
         <!-- Información de usuario -->
