--- a/NEURODASH/views/topi-memori/topiMemori.html
+++ b/NEURODASH/views/topi-memori/topiMemori.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="../../lib/fontawesome/css/all.css">
 
   </head>
-<body class="backgound-uno" style="height: 100vh;">
+<body class="backgound-topi" style="height: 100vh;">
   <div class="container-fluid estilo">
     <div class="row">
       <div class="col-6 d-flex justify-content-start">
           <a href="" title="Configuraciones" class="hover-icons">
-            <img src="../../assets/img/iconos/config.png" alt="botón configuración" class="configuraciones">
+            <img src="../../assets/img/iconos-desarrollo/configuraciones.gif" alt="botón configuración" class="configuraciones">
           </a>
       </div>
       <div class="col-6 d-flex justify-content-end">
@@ -27,38 +27,37 @@
     <div class="row">
         <div class="col-6 d-flex justify-content-start">
             <a href="" title="Configuraciones" class="hover-icons" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              <img src="../../assets/img/iconos-desarrollo/infoTop.gif" alt="botón configuración" class="configuraciones">
+              <img src="../../assets/img/iconos-desarrollo/infoTopi.gif" alt="botón configuración" class="configuraciones">
             </a>
         </div>
     </div>
     <div class="row">
-        <div class="col-12 d-flex justify-content-center align-items-center flex-column position-relative">
-            <img src="../../assets/img/iconos-principales/topiCesta.png" alt="logo" class="cestaTopi">
-            <img src="../../assets/img/iconos-principales/topLogo.png" alt="logo" class="position-absolute lgoTop">
+      <div class="col-12 d-flex justify-content-center align-items-center">
+        <div class="carTopi">
+          <div class="col-12 d-flex">
+            <div class="col-6">
+              <img src="../../assets/img/fondos-pantalla/hola4.jpg" alt="fondologo" class="topiImgbar">
+              <!-- <img src="../../assets/img/iconos-principales/topiCesta.png" alt="logo" class="cestaTopi"> -->
+              <img src="../../assets/img/iconos-principales/topLogo.png" alt="logo" class="position-absolute lgoTop">
+            </div>
+            <div class="col-6 d-flex justify-content-center align-items-center flex-column fdoTopi">
+              <a href="memorTopy.html" class="btn-facil">
+                FACIL
+              </a>
+              <a href="memorTopy.html" class="btn-medio mt-3">
+                MEDIO
+              </a>
 
-        
-            <a class="btnTopi position-absolute btn-facil" href="memori.html">
-                <div class="btn-txt">
-                    <span class="text">FACIL</span>
-                </div>
-            </a>
-        
-            <a class="btnTopi position-absolute btn-medio" href="memori.html">
-                <div class="btn-txt">
-                    <span class="text">MEDIO</span>
-                </div>
-            </a>
-        
-            <a class="btnTopi position-absolute btn-dificil" href="memori.html">
-                <div class="btn-txt">
-                    <span class="text">DIFICIL</span>
-                </div>
-            </a>
-            
+              <a href="memorTopy.html" class="btn-dificil mt-3">
+               DIFICIL
+              </a>
+              
+            </div>
+          </div>
+
         </div>
-    </div>
-  </div> 
-
+      </div>
+      
   
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
