actualizacion-entrenamiento-fondos-pasaPalabras

--- a/NEURODASH/views/juego/salaEspera.html
+++ b/NEURODASH/views/juego/salaEspera.html
@@ -7,7 +7,7 @@
   
     <!-- icono pag -->
   <link rel="icon" href="../../assets/img/iconos-principales/rayo_nuzit.icon" />
-  <!-- librerias bootstrap -->
+  <!-- librerías bootstrap -->
   <link rel="stylesheet" href="../../lib/bootstrap/css/bootstrap.min.css" />
   <link rel="stylesheet" href="../../lib/fontawesome/css/all.min.css">
   <!-- <link rel="stylesheet" href="../assets/css/salaEspera.css" /> -->
