--- a/NEURODASH/views/forms/login.html
+++ b/NEURODASH/views/forms/login.html
@@ -19,7 +19,7 @@
     <div class="container-forms">
         <div class="signin-signup">
             <!-- formulario de acceso -->
-            <form action="" class="sign-in-form">
+            <form class="sign-in-form">
                 <h2 class="title-forms">INICIAR SESIÓN</h2>
                 <div class="col-12" id="liveAlertPlaceholder"></div>
                 <div class="input-field">
@@ -36,20 +36,20 @@
             </form>
 
             <!-- formulario de registro -->
-            <form action="" class="sign-up-form">
+            <form class="sign-up-form">
                 <h2 class="title-forms">Registrarse</h2>
                 <div class="input-field">
                     <i class="fas fa-user"></i>
-                    <input type="text" placeholder="User name">
+                    <input type="text" placeholder="User name" name="txtUsernameB">
                 </div>
                 <div class="input-field">
                     <i class="fas fa-envelope"></i>
-                    <input type="email" placeholder="User Email">
+                    <input type="email" placeholder="User Email" name="txtEmailB">
                 </div>
-                <div class="input-field">
+                <!-- <div class="input-field">
                     <i class="fas fa-lock"></i>
                     <input type="password" placeholder="Password">
-                </div>
+                </div> -->
                 <!-- <input type="submit" value="Sing up" class="btn"> -->
                 <input type="submit" class="comic-button" value="Registrarse">
                 <p class="account-text">Already have an account? <a href="#" id="sign-in-btn2">Sign in</a></p>
