actualizacion-home-entrenamiento

--- a/NEURODASH/views/home.html
+++ b/NEURODASH/views/home.html
@@ -210,18 +210,19 @@
           </div>
           
           <!-- Vista para PC -->
-          <div id="card-container" class="row row-cols-1 row-cols-md-3 d-none d-md-flex">
-            <!-- Se agrega mediante JavaScript -->
-          </div>
+          <!-- Se agrega mediante JavaScript -->
+          <!-- <div id="card-container" class="row d-none d-md-flex"></div> -->
           
           <!-- Vista para móvil -->
-          <div class="row d-md-none">
+          <div class="row ">
             <div class="col-12">
               <!-- Slider principal -->
               <div class="swiper swiper-home p-0 m-0">
                 <div class="swiper-wrapper" id="swiper-wrapper-home">
                   <!-- Se agrega mediante JavaScript -->
                 </div>
+                <div class="swiper-pagination"></div>
+
               </div>
             </div>
           </div>
