--- a/NEURODASH/views/home.html
+++ b/NEURODASH/views/home.html
@@ -193,6 +193,7 @@
         
       </div>
     </nav>
+
     <div class="container">
       
       <div class="main aling-item-centerN">
@@ -207,7 +208,8 @@
           </div>
           
           <!-- Vista para PC -->
-          <div id="card-container" class="row row-cols-1 row-cols-md-3 d-none d-md-flex">
+          <div id="card-container" class="row d-none d-md-flex">
+
             <!-- Se agrega mediante JavaScript -->
           </div>
           
@@ -215,7 +217,7 @@
           <div class="row d-md-none">
             <div class="col-12">
               <!-- Slider principal -->
-              <div class="swiper p-0 m-0">
+              <div class="swiper p-0 m-0" >
                 <div class="swiper-wrapper" id="swiper-wrapper">
                   <!-- Se agrega mediante JavaScript -->
                 </div>
