--- a/NEURODASH/views/home.html
+++ b/NEURODASH/views/home.html
@@ -215,11 +215,11 @@
           <div class="row ">
             <div class="col-12">
               <!-- Slider principal -->
-              <div class="swiper p-0 m-0" >
+              <div class="swiper swiper-home p-0 m-0" >
                 <div class="swiper-wrapper" id="swiper-wrapper">
                   <!-- Se agrega mediante JavaScript -->
                 </div>
-                <div class="swiper-pagination"></div>
+          
 
               </div>
             </div>
