--- a/NEURODASH/views/invitado/invitado_home.html
+++ b/NEURODASH/views/invitado/invitado_home.html
@@ -128,6 +128,6 @@
 
 
     <script src="../../lib/bootstrap/js/bootstrap.js"></script>
-    <script src="../../assets/js/main.js"></script>
+    <script type="module" src="../../assets/js/main.js"></script>
 </body>
 </html>
