--- a/NEURODASH/assets/css/pages/crear-sala.css
+++ b/NEURODASH/assets/css/pages/crear-sala.css
@@ -8,8 +8,8 @@ body{
 }
 .container-crear-sala {
     width: 100%;
-    padding: 20px;
-    background-color: rgba(0, 0, 0, 0.7);
+    /* padding: 20px; */
+    /* background-color: rgba(0, 0, 0, 0.7); */
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
     overflow: hidden;
@@ -67,10 +67,11 @@ body{
     border: 1px solid #444444;
     background-color: rgba(53, 53, 53, 0.8);
     padding: 15px;
-    border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     font-family: Arial, sans-serif;
+    border-radius: 8px;
     width: 100%;
+    height: 300px;
 }
 
 .token, .creador-sala, .nivel, .modo-juego, .cantidad, .estado, .iniciar-sala {
@@ -153,14 +154,12 @@ body{
     height: 100%;
 }
 .tabla{
-    background-color: rgb(255, 255, 255);
     overflow-y: auto;
-    height: auto;
+    height: 400px;
 }
 tr{
     width: 100%;
     padding: 10px;
-
 }
 .tabla-jugadores{
     padding: 10px;
@@ -251,4 +250,34 @@ tr{
 
 .send-icon:hover {
     background-color: #008ba3;
+}
+
+
+.list-jugadores{
+    width: 100%;
+    height: 540px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(24, 60px);
+    justify-items: center;
+    background-color: #000000d2;
+    overflow-y: scroll;
+    border-radius: 10px;
+    padding: 5px;
+    gap: 5px;
+}
+
+.jugador-sala{
+    /* margin: 10px; */
+    width: 95%;
+    height: 60px;
+    border: 1px solid #000000;
+    border-radius: 6px;
+    background-color: #747474a1;
+    
+    &:hover{
+        border: 1px solid #666666ad;
+        box-shadow: 0 0 15px #ea00ff9f;
+
+    }
 }
