--- a/NEURODASH/views/creacion_sala/crearsala2.html
+++ b/NEURODASH/views/creacion_sala/crearsala2.html
@@ -12,62 +12,101 @@
     <link rel="stylesheet" href="../../assets/css/pages/crear-sala.css">
 </head>
 <body class="backgound-uno">
-    <div class="logo background-logo"></div>
-    <div class="container-crear-sala d-flex flex-column">
-        <h1 class="text-center">CREAR SALA</h1>
+    <!-- <div class="logo background-logo"></div> -->
+    <div class="container-crear-sala d-flex flex-column ">
+        
 
-        <div class="row container-sala">
-            <!-- Tabla de Usuarios -->
-            <div class="col-md-7 ms-5 d-flex flex-column text-center justify-content-between">
-                <div class="container-tabla-usuarios mt-5 d-flex flex-column text-center">
-                    <table class="tabla" id="usuariosTabla">
-                        <tbody class="tabla-jugadores d-flex text-center justify-content-between flex-column">
-                            <!-- Contenido de la tabla aquí -->
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-
+        <div class="row container container-sala">
             <!-- container Opciones y Chat -->
-            <div class="col-md-3 d-flex mt-5 flex-column align-items-center">
+            <div class="col-md-5 d-flex flex-column align-items-center">
                 <!-- Opciones -->
-                <div class="container-opciones d-flex flex-column align-items-center gap-3 mb-3">
-                    <div class="token">1234123 <i class="fa-regular fa-pen-to-square"></i></div>
-                    <div class="creador-sala">admin</div>
-                    <div class="nivel">level</div>
-                    <div class="modo-juego">
-                        <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Modo de Juego
-                            </button>
-                            <ul class="dropdown-menu" id="modoJuegoDropdown">
-                                <li><a class="dropdown-item" href="#" id="fondo2">Términos</a></li>
-                                <li><a class="dropdown-item" href="#" id="fondo3">Números</a></li>
-                                <li><a class="dropdown-item" href="#" id="fondo4">Imágenes</a></li>
-                            </ul>
+                <div class="col-12">
+                    <div class="container-opciones d-flex flex-column align-items-center gap-3 mb-3">
+                        <div class="token">1234123 <i class="fa-regular fa-pen-to-square"></i></div>
+                        <!-- <div class="token">1234123 <i class="fa-regular fa-pen-to-square"></i></div>
+                        <div class="creador-sala">admin</div>
+                        <div class="modo-juego">
+                            <div class="dropdown">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    nivel 
+                                </button>
+                                <ul class="dropdown-menu" id="modoJuegoDropdown">
+                                    <li><a class="dropdown-item" href="#" id="fondo2">Términos</a></li>
+                                    <li><a class="dropdown-item" href="#" id="fondo3">Números</a></li>
+                                    <li><a class="dropdown-item" href="#" id="fondo4">Imágenes</a></li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
-                    <div class="cantidad d-flex justify-content-center align-items-center text">
+                        <div class="nivel">modo de juego</div>
                         <div class="cantidad-jugadores">Jugadores</div>
-                        <button class="flecha" id="decrementar">-</button>
-                        <input type="number" id="cantidadInput" value="2" min="1" max="24" />
-                        <button class="flecha" id="incrementar">+</button>
-                        <button id="actualizarCantidad"></button>
+                        <div class="cantidad d-flex justify-content-center align-items-center text">
+                            
+                            <button class="flecha" id="decrementar">-</button>
+                            <input type="text" id="cantidadInput" value="2" min="1" max="24" />
+                            <button class="flecha" id="incrementar">+</button>
+                            <div type="button" id="actualizarCantidad"></div>
+                        </div>
+                        <div class="estado">state</div>
+                        <button class="iniciar-juego btn btn-primary">Iniciar Juego</button>
+                        <p>Nombre de Servidor: (user-name)</p> -->
+                
                     </div>
-                    <div class="estado">state</div>
-                    <button class="iniciar-juego btn btn-primary">Iniciar Juego</button>
-                    <p>Nombre de Servidor: (user-name)</p>
-            
+                </div>
+                <div class="col-12">
                     <!-- Chat -->
-                    <div class="chat-container d-flex flex-column w-100 mt-3">
+                    <div class="chat-container d-flex flex-column">
                         <div id="chat-box" class="chat-box"></div>
-                        <div class="chat-input d-flex align-items-center mt-2">
+                        <div class="chat-input d-flex align-items-center">
                             <input type="text" id="chat-input" placeholder="Escribe un mensaje..." class="form-control">
                             <div class="send-icon" onclick="enviarMensaje()">
                                 <i class="fa-regular fa-message"></i> 
                             </div>
                         </div>
                     </div>
+                    
+                </div>
+
+                
+            </div>
+            <!-- Tabla de Usuarios -->
+             
+            <div class="col-md-7 d-flex flex-column text-center justify-content-between">
+                <h2 class="text-center">SALA ESPERA</h1>
+                <div class="container-tabla-usuarios d-flex flex-column text-center">
+                    <div class="list-jugadores" id="usuariosTabla">
+                        <div class="jugador-sala">
+                            <img src="" alt="">
+                            <span>Name user</span>
+                        </div>
+                        <div class="jugador-sala"></div>
+                        <div class="jugador-sala"></div>
+                        <div class="jugador-sala"></div>
+                        <div class="jugador-sala"></div>
+                        <div class="jugador-sala"></div>
+                        <div class="jugador-sala"></div>
+                        <div class="jugador-sala"></div>
+                        <div class="jugador-sala"></div>
+                        <div class="jugador-sala"></div>
+                        <div class="jugador-sala"></div>
+                        <div class="jugador-sala"></div>
+                        <div class="jugador-sala"></div>
+                        <div class="jugador-sala"></div>
+                        <div class="jugador-sala"></div>
+                        <div class="jugador-sala"></div>
+                        <div class="jugador-sala"></div>
+                        <div class="jugador-sala"></div>
+                        <div class="jugador-sala"></div>
+                        <div class="jugador-sala"></div>
+                        <div class="jugador-sala"></div>
+                        <div class="jugador-sala"></div>
+                        <div class="jugador-sala"></div>
+                        <div class="jugador-sala"></div>
+                    </div>
+                    <!-- <table class="tabla" id="usuariosTabla">
+                        <tbody class="tabla-jugadores d-flex text-center justify-content-between flex-column">
+                        
+                        </tbody>
+                    </table> -->
                 </div>
             </div>
             
