--- a/NEURODASH/assets/css/utilities/utilices.css
+++ b/NEURODASH/assets/css/utilities/utilices.css
@@ -155,3 +155,16 @@
 #pagee2{
   display: none;
 }
+
+.no-valid{
+  border: 5px solid red !important;
+}
+
+.yes-valid{
+  border: 5px solid green !important;
+}
+
+.disabled-input{
+  background-color: #757575 !important;
+  border:  2px solid #757575 !important;
+}
