--- a/NEURODASH/views/creacion_sala/crearsala2.html
+++ b/NEURODASH/views/creacion_sala/crearsala2.html
@@ -18,13 +18,12 @@
 
         <div class="row container container-sala">
             <!-- container Opciones y Chat -->
-            <div class="col-md-5 d-flex flex-column align-items-center">
+            <div class="col d-flex flex-column align-items-center">
                 <!-- Opciones -->
                 <div class="col-12">
-                    <div class="container-opciones d-flex flex-column align-items-center gap-3 mb-3">
+                    <div class="container-opciones d-flex flex-column align-items-center mb-3">
                         <div class="token">1234123 <i class="fa-regular fa-pen-to-square"></i></div>
-                        <!-- <div class="token">1234123 <i class="fa-regular fa-pen-to-square"></i></div>
-                        <div class="creador-sala">admin</div>
+                        <div class="admin">admin</div>
                         <div class="modo-juego">
                             <div class="dropdown">
                                 <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -40,15 +39,15 @@
                         <div class="nivel">modo de juego</div>
                         <div class="cantidad-jugadores">Jugadores</div>
                         <div class="cantidad d-flex justify-content-center align-items-center text">
-                            
-                            <button class="flecha" id="decrementar">-</button>
-                            <input type="text" id="cantidadInput" value="2" min="1" max="24" />
-                            <button class="flecha" id="incrementar">+</button>
+                            <span id="decrementar"><i class="fa-solid fa-chevron-left"></i>
+                            <input type="text" id="cantidadInput" value="2" min="1" max="24" >
+                            <span  id="incrementar"><i class="fa-solid fa-chevron-right"></i></span>
                             <div type="button" id="actualizarCantidad"></div>
+                            
                         </div>
                         <div class="estado">state</div>
                         <button class="iniciar-juego btn btn-primary">Iniciar Juego</button>
-                        <p>Nombre de Servidor: (user-name)</p> -->
+                        <p>Nombre de Servidor: (user-name)</p>
                 
                     </div>
                 </div>
@@ -79,28 +78,7 @@
                             <span>Name user</span>
                         </div>
                         <div class="jugador-sala"></div>
-                        <div class="jugador-sala"></div>
-                        <div class="jugador-sala"></div>
-                        <div class="jugador-sala"></div>
-                        <div class="jugador-sala"></div>
-                        <div class="jugador-sala"></div>
-                        <div class="jugador-sala"></div>
-                        <div class="jugador-sala"></div>
-                        <div class="jugador-sala"></div>
-                        <div class="jugador-sala"></div>
-                        <div class="jugador-sala"></div>
-                        <div class="jugador-sala"></div>
-                        <div class="jugador-sala"></div>
-                        <div class="jugador-sala"></div>
-                        <div class="jugador-sala"></div>
-                        <div class="jugador-sala"></div>
-                        <div class="jugador-sala"></div>
-                        <div class="jugador-sala"></div>
-                        <div class="jugador-sala"></div>
-                        <div class="jugador-sala"></div>
-                        <div class="jugador-sala"></div>
-                        <div class="jugador-sala"></div>
-                        <div class="jugador-sala"></div>
+
                     </div>
                     <!-- <table class="tabla" id="usuariosTabla">
                         <tbody class="tabla-jugadores d-flex text-center justify-content-between flex-column">
