--- a/NEURODASH/assets/css/pages/crear-sala.css
+++ b/NEURODASH/assets/css/pages/crear-sala.css
@@ -62,17 +62,6 @@ body{
     width: 50%;
     height: 50%;
 }
-.container-opciones {
-    color: #f0f0f0;
-    border: 1px solid #444444;
-    background-color: rgba(53, 53, 53, 0.8);
-    padding: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    font-family: Arial, sans-serif;
-    border-radius: 8px;
-    width: 100%;
-    height: 300px;
-}
 
 .token, .creador-sala, .nivel, .modo-juego, .cantidad, .estado, .iniciar-sala {
     margin-bottom: 10px;
@@ -278,6 +267,37 @@ tr{
     &:hover{
         border: 1px solid #666666ad;
         box-shadow: 0 0 15px #ea00ff9f;
-
+        
     }
 }
+
+.container-opciones{
+    width: 100%;
+    height: 300px;
+    display: grid;
+    grid-template-columns: 1fr, 1fr;
+    grid-template-rows: repeat(8, 30px);
+    justify-items: center;
+    background-color: #0000007e;
+    overflow-y: scroll;
+    border-radius: 10px;
+    padding: 5px;
+    gap: 5px;
+}
+
+
+
+
+
+
+/* .container-opciones {
+    color: #f0f0f0;
+    border: 1px solid #444444;
+    background-color: rgba(53, 53, 53, 0.8);
+    padding: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    font-family: Arial, sans-serif;
+    border-radius: 8px;
+    width: 100%;
+    height: 300px;
+} */
