--- a/NEURODASH/views/home.html
+++ b/NEURODASH/views/home.html
@@ -36,11 +36,11 @@
             <li class="m-2 p-2">
               <div class="row aling-item-centerN">
                 <div class="text-center col-7 menu me-2 ">
-                  <img class="icon-home" src="../assets/img/iconos-desarrollo/icono-user.svg" alt="User" />
+                  <img class="icon-home2" src="../assets/img/iconos-desarrollo/icono-user.svg" alt="User" />
                   <span class="text-white">Yisus</span>
                 </div>
                 <div class="col-4 menu text-center" data-bs-toggle="modal" data-bs-target="#modalBonos">
-                  <img class="icon-home" src="../assets/img/iconos-desarrollo/img-bonos.png" alt="Bonos" />
+                  <img class="icon-home3" src="../assets/img/iconos-desarrollo/img-bonos.png" alt="Bonos" />
                 </div>
               </div>
             </li>
@@ -68,7 +68,7 @@
             </li>
             <li class="text-center">
               <div class="info-sesion">
-                <a href="../model/public/cerrarSession.php" class="btn fondo-btn">Cerrar Sesión</a>
+                <a href="../model/public/cerrarSession.php" class="btn fondo-btn2">Cerrar Sesión</a>
               </div>
             </li>
           </ul>
@@ -83,9 +83,10 @@
           
           <div class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start mt-3 bg-dark p-2">
             <div class="aling-item-centerN m-2">
+              <h5 class="txtliga">BRONCE</h5>
               <img class="icon-liga" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Liga" />
             </div>
-            <table class="table table-dark table-bordered">
+            <table class="table table-danger table-bordered">
               <thead>
                 <tr>
                   <th scope="col">Puesto</th>
@@ -415,7 +416,7 @@
     </div>
 
     <!-- Modal LIGAS-->
-    <div class="modal fade card-fondo modal-home" id="modalLigas" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade fondoMdl modal-home" id="modalLigas" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-sm">
         <div class="modal-content">
           <div class="modal-header bg-dark">
