--- a/NEURODASH/views/forms/validationToken.html
+++ b/NEURODASH/views/forms/validationToken.html
@@ -17,7 +17,7 @@
             <div class="col-4"></div>
             <div class="col-md-12 right-box">
                 <div class="row align-items-center">
-                    <form>
+                    <form action="../../processes/register/registrar.php" method="post" class="registrar-login">
                         <div class="header-text mb-4">
                             <h2 class="text-white text-center">Contraseña</h2>
                         </div>
@@ -28,11 +28,11 @@
                         </div>
 
                         <div class="input-group mb-3">
-                            <input type="password" class="contra-2 disabled-input form-control form_style rounded-3 form-control-lg bg-light fs-6" disabled placeholder="Validad contraseña">
+                            <input name="passwordUser" type="password" class="contra-2 disabled-input form-control form_style rounded-3 form-control-lg bg-light fs-6" disabled placeholder="Validad contraseña">
                         </div>
 
                         <div class="input-group mb-3">
-                            <a class="btn btn-form btn-lg btn-primary w-100 fs-6 registrar-login" href="../../views/forms/login.html">Registrarse</a>
+                            <button class="btn btn-form btn-lg btn-primary w-100 fs-6">Registrarse</a>
                         </div>
                     </form>
                 </div>
