--- a/NEURODASH/views/entrenamiento/rondas.html
+++ b/NEURODASH/views/entrenamiento/rondas.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../../assets/css/main.css">
 </head>
 
-<body class="backgound-cuatr">
+<body class="backgound-cuatro">
 
 
     <div class="min-vh-100 aling-item-centerN">
