--- a/NEURODASH/views/home.html
+++ b/NEURODASH/views/home.html
@@ -233,7 +233,7 @@
 
 
     <!-- Modal Bonos-->
-    <div class="modal fade card-fondo modal-home" id="modalBonos" tabindex="-1" aria-labelledby="modalBonos" aria-hidden="true">
+    <div class="modal fade fondoMdl modal-home" id="modalBonos" tabindex="-1" aria-labelledby="modalBonos" aria-hidden="true">
       <div class="modal-dialog modal-sm modal-dialog-centered">
         <div class="modal-content bg-dark">
           <div class="modal-header">
@@ -272,7 +272,7 @@
     </div>
 
     <!-- Modal Historial 2 -->
-    <div class="modal fade card-fondo modal-home" id="modalHistorial" aria-labelledby="modalHistorial" aria-hidden="true"
+    <div class="modal fade fondoMdl2 modal-home" id="modalHistorial" aria-labelledby="modalHistorial" aria-hidden="true"
       tabindex="-1">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content bg-dark">
@@ -317,7 +317,7 @@
     </div>
 
     <!-- Modal Notificaciones 3 -->
-    <div class="modal fade card-fondo modal-home" id="modalNotificaciones" aria-hidden="true" aria-labelledby="modalNotificaciones"
+    <div class="modal fade fondoMdl3 modal-home" id="modalNotificaciones" aria-hidden="true" aria-labelledby="modalNotificaciones"
       tabindex="-1">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content bg-dark">
@@ -378,7 +378,7 @@
     </div>
 
     <!-- Modal Configuracion 1 -->
-    <div class="modal fade card-fondo modal-home" id="menu" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade fondoMdl modal-home" id="menu" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-sm">
         <div class="modal-content">
           <div class="modal-header bg-dark">
