--- a/NEURODASH/assets/css/pages/home.css
+++ b/NEURODASH/assets/css/pages/home.css
@@ -278,6 +278,18 @@
   background-repeat: no-repeat;
 }
 
+.fondoMdl2{
+  background-image: url(../../img/fondos-pantalla/fondo3.jpg);
+  background-size: cover; /* cubre todo*/
+  background-repeat: no-repeat;
+}
+
+.fondoMdl3{
+  background-image: url(../../img/fondos-pantalla/fondo6.jpg);
+  background-size: cover; /* cubre todo*/
+  background-repeat: no-repeat;
+}
+
 .card-fondo-1{
   background-color: rgba(248, 55, 55, 1);
 
@@ -374,7 +386,7 @@
   width: max-content;
   text-align: center;
   padding: 10px 10px;
-  background: var(--clr-botones);
+  background-color: #7e44ad;
   border-radius: 8px;
   border: 2px solid rgba(177, 177, 177, 0.4);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
